apps/podinfo/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - podinfo.staging.techops.dedyn.io # Add deSec subdomain
      secretName: podinfo-staging-tls
  rules:
    - host: podinfo.staging.techops.dedyn.io # Add deSec subdomain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
